tests/errors/recursion-limit.chef
Recursion Limit Test.

This recipe will exceed the recursion depth limit.

Ingredients.
1 g counter

Method.
Serve with recursion limit test.

Serves 1.
